--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && cp _routes.json out/_routes.json && cp public/_redirects out/_redirects && cp public/_headers out/_headers && cp public/404.html out/404.html",
+    "build": "xcopy /s /y public\\* out\\ && copy _routes.json out\\_routes.json",
     "start": "next start",
     "lint": "next lint"
   },
