--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "mkdir -p out && cp -r public/* out/ && cp _routes.json out/_routes.json",
+    "build": "mkdir -p out && cp -r public/* out/",
     "build:alt": "mkdir -p out && find public -type f -exec cp {} out/ \\; && cp _routes.json out/_routes.json",
     "start": "next start",
     "lint": "next lint"
