--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "mkdir -p out && cp -r public/* out/",
+    "build": "if exist out rd /s /q out && mkdir out && xcopy /E /I public\\* out\\",
+    "build:linux": "mkdir -p out && cp -r public/* out/",
     "build:alt": "mkdir -p out && find public -type f -exec cp {} out/ \\; && cp _routes.json out/_routes.json",
     "start": "next start",
     "lint": "next lint"
