--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "if exist out rd /s /q out && mkdir out && xcopy /E /I public\\* out\\",
+    "build": "mkdir -p out && cp -r public/* out/",
+    "build:win": "npm run clean:win && mkdir out && xcopy /E /I public out",
+    "clean:win": "if exist out (rmdir /s /q out)",
     "build:linux": "mkdir -p out && cp -r public/* out/",
     "build:alt": "mkdir -p out && find public -type f -exec cp {} out/ \\; && cp _routes.json out/_routes.json",
     "start": "next start",
